--- a/AirportMVC1/Views/Home/About.cshtml
+++ b/AirportMVC1/Views/Home/About.cshtml
@@ -4,4 +4,8 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>This is learning ASP.NET MVC based airport simulation project.</p>
+<p>Student: Vitaliy Nikitchyn</p>
+<picture>
+    <img src="/Pics1/contact1.jpg" alt="vnpic1"  style="max-width:500px;"/>
+</picture>
