--- a/AirportMVC1/Views/Home/Contact.cshtml
+++ b/AirportMVC1/Views/Home/Contact.cshtml
@@ -3,15 +3,17 @@
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
+<text>
+    Vitaliy Nikitchyn
+</text>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    Kyiv, Ukraine<br />
+    <br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    097 777 0 567
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>email:</strong>   <a href="mailto:vnikitchyn@gmail.com">vnikitchyn@gmail.com</a><br />
 </address>
