--- a/AirportMVC1/Views/Flight/Find.cshtml
+++ b/AirportMVC1/Views/Flight/Find.cshtml
@@ -1,28 +1,16 @@
 ﻿
+
 @{
     ViewBag.Title = "Find";
 }
 
 <h2>Find</h2>
 
-<form>
-    <input />  
-</form>
 
-<div>
-
-    @{
-        foreach (var flight in Model)
-        {
-            <div>Number: @flight.Number</div>
-            <div>Airline: @flight.Airline</div>
-            <div>Status: @flight.Status</div>
-            <div>port of arrival: @flight.PortArrival</div>
-            <div>port of departure: @flight.PortDeparture</div>
-            <div>Terminal: @flight.Terminal</div>
-            <div>Departure time: @flight.TimeDeparture</div>
-            <div>Arrival expected at: @flight.TimeExpected</div>
-            <div>Real arrival time: @flight.TimeArrival</div>
-        }
-    }
-</div>
+@using (Html.BeginForm("Find", "Flight"))
+{
+    <p>
+    <p>Name: <input type="text" name="number" /></p>
+    <input type="submit" value="Find" />
+    </p>
+} 
