--- a/AirportMVC1/Views/Home/Index.cshtml
+++ b/AirportMVC1/Views/Home/Index.cshtml
@@ -15,7 +15,8 @@
     <div class="col-md-4">
         <h2>Short description</h2>
         <p>
-            Airport can...
+            Airport can showl flights, passengers, tickets, edit and delete them.
+            Also it can find by flight number...
         </p>
     </div>
 </div>
