--- a/AirportMVC1/Views/Flight/AllFlights.cshtml
+++ b/AirportMVC1/Views/Flight/AllFlights.cshtml
@@ -1,10 +1,4 @@
-﻿
-@{
-    Layout = null;
-}
-
-<!DOCTYPE html>
-
+﻿@model List<AirportMVC1.Models.entity.Flight>
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -12,12 +6,22 @@
 </head>
 <body>
     <div> 
-            @{
-                foreach (var flight in Model)
-                {
-                    <div>@flight.ToString()</div>
-                                 }
+        @{
+            foreach (var flight in Model)
+            {
+                <div>Number: @flight.Number</div>
+                <div>Airline: @flight.Airline</div>
+                <div>Status: @flight.Status</div>
+                <div>port of arrival: @flight.PortArrival</div>
+                <div>port of departure: @flight.PortDeparture</div>
+                <div>Terminal: @flight.Terminal</div>
+                <div>Departure time: @flight.TimeDeparture</div>
+                <div>Arrival expected at: @flight.TimeExpected</div>
+                <div>Real arrival time: @flight.TimeArrival</div>
+                <div>@Html.ActionLink("Update", "Update", new { id = flight.FlightId }) @Html.ActionLink("Delete", "Delete", new { id = flight.FlightId })</div>
+                <br/>
             }
+        }
     </div>
 </body>
 </html>
