--- a/AirportMVC1/Views/Flight/Create.cshtml
+++ b/AirportMVC1/Views/Flight/Create.cshtml
@@ -8,24 +8,22 @@
 
 @using (Html.BeginForm()) 
 {
-    @Html.AntiForgeryToken()
-    
+    @Html.AntiForgeryToken()    
     <div class="form-horizontal">
         <h4>Flight</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.TimeArrival, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.TimeArrival, new { htmlAttributes = new { @class = "form-control" } })
+            <div class="col-md-10" >
+                @Html.EditorFor(model => model.TimeArrival, new { htmlAttributes = new { @class = "form-control", @type="datetime" } })
                 @Html.ValidationMessageFor(model => model.TimeArrival, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
             @Html.LabelFor(model => model.TimeDeparture, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.TimeDeparture, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.TimeDeparture, new { htmlAttributes = new { @class = "form-control", @type = "datetime" } })
                 @Html.ValidationMessageFor(model => model.TimeDeparture, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -33,7 +31,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.TimeExpected, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.TimeExpected, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.TimeExpected, new { htmlAttributes = new { @class = "form-control", @type = "datetime" } })
                 @Html.ValidationMessageFor(model => model.TimeExpected, "", new { @class = "text-danger" })
             </div>
         </div>
